--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -72,7 +72,7 @@ Freyam Mehta is a Computer Science and Engineering undergraduate at IIIT Hyderab
 
 ### Rahul Garg
 
-<!-- ![](../static/img/team/rahul.jpg) -->
+![](../static/img/team/rahul.jpeg)
 
 :::info Profile
 Rahul Garg is a research scholar at IIIT Hyderabad with a focus on data security and privacy. He is driven by a desire to create secure and trustworthy systems that protect people's sensitive information.
