[DOCS] Some quick edits

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -63,7 +63,7 @@ The following requirements have been identified for the data anonymisation solut
 ![](../static/img/team/freyam.jpg)
 
 :::info Profile
-Freyam Mehta is a Computer Science and Engineering undergraduate at IIIT Hyderabad. With a passion for data privacy and security, Freyam strives to positively impact the field through her academic and professional pursuits.
+Freyam Mehta is a Computer Science and Engineering undergraduate at IIIT Hyderabad. With a passion for data privacy and security, Freyam strives to positively impact the field through his academic and professional pursuits.
 :::
 
 - Roll Number: 2020101114
