Add Representation Docs

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Intro
+# The Project
 
 ![](../static/img/logo.svg)
 
@@ -37,7 +37,8 @@ The proposed solution will be scalable to accommodate future growth and demand, 
 
 ## Impact
 The implementation of this project will significantly impact the healthcare industry by providing a solution for protecting patient privacy through the effective anonymisation of relational databases. This solution will help healthcare organizations meet privacy regulations and ensure the confidentiality of sensitive patient information.
-Requirements
+\
+## Requirements
 The following requirements have been identified for the data anonymisation solution for relational databases in healthcare:
 
 ### Functional Requirements
@@ -57,39 +58,27 @@ The following requirements have been identified for the data anonymisation solut
 - **Usability**: The solution must be user-friendly, and easy to use, with clear and concise instructions and guidance.
 
 
-## Team
-### Freyam Mehta
+### Representation
 
-![](../static/img/team/freyam.jpg)
-
-:::info Profile
-Freyam Mehta is a Computer Science and Engineering undergraduate at IIIT Hyderabad. With a passion for data privacy and security, Freyam strives to positively impact the field through his academic and professional pursuits.
-:::
-
-- Roll Number: 2020101114
-- Email: freyam.mehta@students.iiit.ac.in
-- GitHub: https://github.com/freyam/
-
-### Rahul Garg
-
-![](../static/img/team/rahul.jpeg)
-
-:::info Profile
-Rahul Garg is a research scholar at IIIT Hyderabad with a focus on data security and privacy. He is driven by a desire to create secure and trustworthy systems that protect people's sensitive information.
-:::
-
-- Roll Number: 2020115006
-- Email: rahul.garg@research.iiit.ac.in
-- GitHub: https://github.com/VanSHOE/
+![](../static/img/repr/use-case.jpeg)
+![](../static/img/repr/activity-08.jpeg)
 
 
-### Anusha Nath Roy
-![](../static/img/team/anusha.jpeg)
+## Activity Diagrams
 
-:::info Profile
-Anusha Nath Roy is an ambitious computer science student at IIIT Hyderabad with a keen interest in data privacy and anonymization. She believes that by making data anonymous, individuals can enjoy their rights to privacy while still allowing data to be analyzed and used for important purposes.
-:::
+### User Authentication
+![](../static/img/repr/activity-06.jpeg)
+![](../static/img/repr/activity-07.jpeg)
 
-- Roll Number: 2020101124
-- Email: anusha.nathroy@research.iiit.ac.in
-- GitHub: https://github.com/AnushaNathRoy/
+### User Configuration
+![](../static/img/repr/activity-01.jpeg)
+
+### Data Upload
+![](../static/img/repr/activity-04.jpeg)
+![](../static/img/repr/activity-05.jpeg)
+
+### Data Validation
+![](../static/img/repr/activity-02.jpeg)
+
+### Data Visualisation
+![](../static/img/repr/activity-03.jpeg)
