--- a/docs/user-story.mdx
+++ b/docs/user-story.mdx
@@ -1,3 +1,8 @@
+---
+sidebar_position: 4
+---
+
+
 # User Story
 
 As a user of the application, I want to be able to anonymize data so that sensitive information is not revealed. The process of anonymization will involve authentication, selection of data source, configuration of data and the use of a privacy model.
