--- a/docs/references.mdx
+++ b/docs/references.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 6
+---
+
 # References
 
 - ARX - Open Source Data Anonymization Software. (n.d.). Retrieved from https://github.com/arx-deidentifier/arx
