--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -4,17 +4,23 @@ sidebar_position: 6
 
 # Installation
 
+`React` is a popular JavaScript library used for building user interfaces. It was created and is maintained by Facebook, and has become a go-to choice for web developers because of its ability to create reusable UI components, its high performance, and its ability to render components on both the server and client side. At Ashe , we have also leveraged the power of React in our frontend development. We use React to build modern, interactive, and responsive applications with a high degree of scalability and maintainability. React allows us to create complex UIs with ease by breaking the interface into smaller components. With React, we can reuse components throughout our application, making it easier to manage and update our frontend code.
+
 ## Frontend
 
 1. Make sure you have Node.js and npm (Node Package Manager) installed on your system. You can check if they are already installed by running the following commands in your terminal:
-   `node -v`
+
+   `node -v`.
+
    We used `v19.8.1` for this project.
-   `npm -v`
+
+   `npm -v`.
+
    We used `8.3.0` for this project.
    If any of these commands fail, you can install Node.js and npm from [here](https://nodejs.org/en/download/).
 
 2. Clone the repository to your local machine using the following command:
-   `git clone https://github.com/VanSHOE/IIIT_H_Anonymization`
+   `git clone https://github.com/VanSHOE/Ashe`
 
 3. Navigate to the project directory:
    `cd IIIT_H_Anonymization/frontend`
@@ -25,3 +31,7 @@ sidebar_position: 6
 5. Run the project:
    `npm start`
 6. The project should now be running on `localhost:3000`.
+
+## Backend
+
+We utilized various backend technologies to build a scalable and efficient web application. We used the ARX Java API to anonymize sensitive data, and built a Maven project with all the necessary dependencies. For creating RESTful APIs, we used Jersey, which is a popular Java framework. To deploy our application, we dockerized our backend system and ran it on a containerized environment using Docker. By utilizing these technologies and Docker, we were able to build a backend system that was efficient, scalable, and easy to deploy.
