--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -77,7 +77,7 @@ The following requirements have been identified for the data anonymisation solut
 
 ## Activity Diagrams
 
-![image](https://user-images.githubusercontent.com/71231079/236909069-76e7b325-9d40-40aa-9444-ddc7f81a8d45.png)
+![image](../static/img/arch/act1.png)
 
 1. `Upload source data file`: The user uploads a source data file to the system. The file should be in csv format.
 
@@ -98,7 +98,7 @@ The following requirements have been identified for the data anonymisation solut
 
 ### User Configuration
 
-![image](https://user-images.githubusercontent.com/71231079/236910167-d95affbb-798e-4544-a05a-e7a1e2304574.png)
+![image](../static/img/arch/act2.png)
 
 The process begins with a `Start` node and includes the following steps:
 
@@ -114,7 +114,7 @@ The process begins with a `Start` node and includes the following steps:
 
 ### Data Upload
 
-![image](https://user-images.githubusercontent.com/71231079/236912533-a2a5c4d5-ff7b-4724-b474-1264b0c75e8e.png)
+![image](../static/img/arch/act3.png)
 
 1. `Ask user to upload data file:` The system prompts the user to upload a data file. This may involve displaying a web form with input fields for the file name, description, and metadata. The system also provides a file picker dialog for the user to select the file from their local file system.
 
