--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -46,7 +46,6 @@ The proposed solution will be scalable to accommodate future growth and demand, 
 ## Impact
 
 The implementation of this project will significantly impact the healthcare industry by providing a solution for protecting patient privacy through the effective anonymisation of relational databases. This solution will help healthcare organizations meet privacy regulations and ensure the confidentiality of sensitive patient information.
-\
 
 ## Requirements
 
@@ -75,6 +74,16 @@ The following requirements have been identified for the data anonymisation solut
 ![](../static/img/repr/use-case.jpeg)
 ![](../static/img/repr/activity-08.jpeg)
 
+### Traceability
+
+|                              **Requirement**                               |                                    **Design**                                     |                                               **Implementation**                                                |                                                         **Testing**                                                         |
+| :------------------------------------------------------------------------: | :-------------------------------------------------------------------------------: | :-------------------------------------------------------------------------------------------------------------: | :-------------------------------------------------------------------------------------------------------------------------: |
+|                      R1: User can upload a data file                       | S1: Ask user to upload data file S2: Validate file format S3: Save file to server | C1: Implement file upload form C2: Implement file validation logic C3: Implement file storage and retrieval API | T1: Test file upload functionality T2: Test file validation functionality T3: Test file storage and retrieval functionality |
+|          R2: System can parse attributes hierarchy and data types          |                   S4: Parse attributes hierarchy and data types                   |                                    C4: Implement attribute parsing algorithm                                    |                                          T4: Test attribute parsing functionality                                           |
+|              R3: System can load user-specified configuration              |                              S5: Load configuration                               |                              C5: Implement configuration loading and parsing logic                              |                                  T5: Test configuration loading and parsing functionality                                   |
+| R4: System can anonymize data based on hierarchy, types, and configuration |                                S6: Anonymize data                                 |                                   C6: Implement data anonymization algorithm                                    |                                          T6: Test data anonymization functionality                                          |
+|                 R5: User can download anonymized data file                 |                         S7: Download anonymized data file                         |                                  C7: Implement file download and streaming API                                  |                                     T7: Test file download and streaming functionality                                      |
+
 ## Activity Diagrams
 
 ![image](../static/img/arch/act1.png)
@@ -90,11 +99,6 @@ The following requirements have been identified for the data anonymisation solut
 5. `Download anonymized data file`: The anonymized data is downloaded by the user in the form of a file. The file is in csv format as the uploaded data file.
 
 6. `End`: The process ends. The system performs cleanup tasks, such as deleting temporary files or closing database connections.
-<!-- 
-### User Authentication
-
-![](../static/img/repr/activity-06.jpeg)
-![](../static/img/repr/activity-07.jpeg) -->
 
 ### User Configuration
 
@@ -106,7 +110,7 @@ The process begins with a `Start` node and includes the following steps:
 
 2. `Validate file format`: The system checks whether the file format is valid. This may involve checking the file extension, file type header, and other file metadata.
 
-3. `Save file to server`: If the file format is valid, the system saves the file to the server. This involves creating a file in specified directory for the uploaded file and setting appropriate file permissions. 
+3. `Save file to server`: If the file format is valid, the system saves the file to the server. This involves creating a file in specified directory for the uploaded file and setting appropriate file permissions.
 
 4. `Success`: If the file is saved successfully, it is a success and system provides options for the user to re-upload the file.
 
@@ -118,18 +122,10 @@ The process begins with a `Start` node and includes the following steps:
 
 1. `Ask user to upload data file:` The system prompts the user to upload a data file. This may involve displaying a web form with input fields for the file name, description, and metadata. The system also provides a file picker dialog for the user to select the file from their local file system.
 
-2. `Validate file format`: The system checks whether the file format is valid. This involves checking the file extension, file type header, and other file metadata. 
+2. `Validate file format`: The system checks whether the file format is valid. This involves checking the file extension, file type header, and other file metadata.
 
-3. `Save file to server`: If the file format is valid, the system saves the file to the server. This involvse creating a new file in specified directory for the uploaded file and setting appropriate file permissions. 
+3. `Save file to server`: If the file format is valid, the system saves the file to the server. This involvse creating a new file in specified directory for the uploaded file and setting appropriate file permissions.
 
 4. `Display success message`: If the file is saved successfully, it is a success and involves redirecting the user to a new page.
 
 5. `End`: The process ends. The system performs cleanup tasks, such as deleting temporary files or closing database connections.
-
-<!-- ### Data Validation
-
-![](../static/img/repr/activity-02.jpeg)
-
-### Data Visualisation
-
-![](../static/img/repr/activity-03.jpeg) -->
